--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ ul.menutable li.row:last-child {
 	border-bottom-left-radius: 6px;
 }
 
-.row {
+.path-mod-tab .row {
         background-color: #EEEEEE;
 }
 
